added team stats in tournament in frontend
