# app/ErtsWebApp/ClientApp/src/Resources.ts
@@ -7,6 +7,7 @@ export default class Resources {
 		lolTournamentScoreBoard: "/:gameType/:leagueId/:serieId/:tournamentId/scoreBoard",
 		lolTournamentMatchList: "/:gameType/:leagueId/:serieId/:tournamentId/matches",
 		lolTournamentPlayerStatsList: "/:gameType/:leagueId/:serieId/:tournamentId/playerStats",
+		lolTournamentTeamStatsList: "/:gameType/:leagueId/:serieId/:tournamentId/teamStats",
 		lolMatch: "/:gameType/match/:matchId",
 	};
 	public static buttons = {
